# ClustersInFocus

./: .gitignore  README.md  citation.cff  docker-compose.yml  eda.ipynb  package-lock.json  package.json
backend/: .env  Dockerfile  app.db  notes.md  pyproject.toml  requirements.txt  run.py
backend/core/: config.py  database.py
backend/data/: .gitkeep
backend/database/: __init__.py  db_service.py  models.py
backend/models/: clustering.py  dataset.py  shapley.py
backend/routers/: __init__.py  analysis.py  clustering.py  dataset.py  debug.py  shapley.py
backend/services/: __init__.py  clustering_service.py  computing_service.py  shapley_service.py
backend/templates/: index.html
backend/utils/: __init__.py  data_utils.py  logger.py
data-analysis-dashboard/: package-lock.json  package.json
data-analysis-dashboard/src/: App.css  App.tsx
data-analysis-dashboard/src/components/: AnalysisPanel.tsx  BarChartD3.tsx  BoxplotReactCharts.tsx  BoxplotRecharts.tsx  ClusteringPanel.tsx  ColumnMenu.tsx  ComputeClustersButton.tsx  DataTable.tsx  DataTableColumnHoverMenu.tsx  DataTableColumnMenu.tsx  FileUpload.tsx  Footer.tsx  Header.tsx  Histogram.tsx  HistogramRecharts.tsx  HistogramTiny.tsx  KMeansFeaturePairs.tsx  PCAAnalysis.tsx  Panel1_Data.tsx  Panel2Clustering.tsx  Panel2_Clustering.tsx  Panel3Analysis.tsx  Panel3_Analysis.tsx  ScatterplotClustered.tsx  ScatterplotRecharts.tsx
data-analysis-dashboard/src/services/: ClusteringService.ts  LocalStorageService.ts
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  types.tsx
(+45 files in other folders)
